Fix code section spacing

--- a/resources/sass/_imports/pages/_about.sass
+++ b/resources/sass/_imports/pages/_about.sass
@@ -45,6 +45,8 @@
     @media (max-width: 992px)
         margin: 0
         transform: translateY(-50%) scale(0.8)
+    @media (min-width: 768px)
+        margin: 0 1rem 0 0
     // @media (max-width: 768px)
     //     transform: translateY(-50%) scale(0.6)
     .line-code
